<resources>

    <string name="app_name">Camara</string>
    <string name="titulo">Gestión de cámara</string>
    <string name="menu1">Lector Barras/QR</string>
    <string name="menu2">Tomar foto</string>
    <string name="titulo1">Lector de Barra y QR</string>
    <string name="escanear">Escanear</string>
    <string name="res">Código leido</string>
    <string name="descripcion">Captura descripción</string>
    <string name="capturar">Capturar</string>
    <string name="limpiar">Limpiar</string>
    <string name="titulo2">Tomar fotografia</string>
    <string name="foto">Tomar fotografia</string>
</resources>